--- a/teamproj/MyInsurance/MyInsurance/en.lproj/MainStoryboard.storyboard
+++ b/teamproj/MyInsurance/MyInsurance/en.lproj/MainStoryboard.storyboard
@@ -257,7 +257,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="detailDisclosureButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Gbk-pM-BFN">
-                                        <rect key="frame" x="0.0" y="143" width="320" height="45"/>
+                                        <rect key="frame" x="0.0" y="143" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="10" y="0.0" width="267" height="43"/>
@@ -276,6 +276,29 @@
                                             <constraint firstItem="Is4-CD-L3X" firstAttribute="leading" secondItem="Gbk-pM-BFN" secondAttribute="leading" constant="30" id="Uf0-CH-8J8"/>
                                         </constraints>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="detailDisclosureButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="TUX-vf-BcL">
+                                        <rect key="frame" x="0.0" y="187" width="320" height="45"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="10" y="0.0" width="267" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="View Policy" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hgo-Da-VB4">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="hgo-Da-VB4" firstAttribute="leading" secondItem="TUX-vf-BcL" secondAttribute="leading" constant="30" id="MOk-vq-tI7"/>
+                                            <constraint firstItem="hgo-Da-VB4" firstAttribute="top" secondItem="TUX-vf-BcL" secondAttribute="top" constant="11" id="mMT-Xe-lsz"/>
+                                        </constraints>
+                                        <connections>
+                                            <segue destination="mrb-YA-oyr" kind="push" id="iOd-2U-uI6"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -293,7 +316,68 @@
             </objects>
             <point key="canvasLocation" x="1606" y="211"/>
         </scene>
-        <!--Map View Controller-->
+        <!--Policy View Controller - Policy-->
+        <scene sceneID="7kX-UT-gzl">
+            <objects>
+                <tableViewController id="mrb-YA-oyr" customClass="PolicyViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="2v1-GE-3ga">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="driverCell" id="SDb-4r-4m4">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xFw-10-D7L">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="xFw-10-D7L" firstAttribute="leading" secondItem="SDb-4r-4m4" secondAttribute="leading" constant="20" type="default" id="I8z-0m-IlZ"/>
+                                    <constraint firstItem="xFw-10-D7L" firstAttribute="top" secondItem="SDb-4r-4m4" secondAttribute="top" constant="11" id="wbF-FW-QVl"/>
+                                </constraints>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="vehicleCell" id="hL8-xw-KUy">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fj1-V3-zv7">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="fj1-V3-zv7" firstAttribute="leading" secondItem="hL8-xw-KUy" secondAttribute="leading" constant="20" type="default" id="EMT-9w-5JH"/>
+                                    <constraint firstItem="fj1-V3-zv7" firstAttribute="top" secondItem="hL8-xw-KUy" secondAttribute="top" constant="11" id="EqZ-Mi-Dt7"/>
+                                </constraints>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="mrb-YA-oyr" id="zmm-tW-Up3"/>
+                            <outlet property="delegate" destination="mrb-YA-oyr" id="3jF-xf-wJf"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Policy" id="Rvb-2P-hJm"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="acf-Ec-V6T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2149" y="1829"/>
+        </scene>
+        <!--Map View Controller - Map-->
         <scene sceneID="jfM-ud-eLf">
             <objects>
                 <viewController id="0pd-PR-aMh" customClass="MapViewController" sceneMemberID="viewController">
@@ -302,7 +386,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="7dI-g2-aJ6"/>
+                    <navigationItem key="navigationItem" title="Map" id="7dI-g2-aJ6"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WqL-Ge-cJq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -414,7 +498,7 @@
             </objects>
             <point key="canvasLocation" x="2144" y="-230"/>
         </scene>
-        <!--Vehicle Confirmation View Controller-->
+        <!--Vehicle Confirmation View Controller - Vehicle Info-->
         <scene sceneID="pmG-qY-pJO">
             <objects>
                 <viewController id="NDQ-Sx-F40" customClass="VehicleConfirmationViewController" sceneMemberID="viewController">
@@ -512,7 +596,7 @@
                             <constraint firstItem="QNf-7q-gO0" firstAttribute="top" secondItem="Jku-NN-JNa" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="zLO-BI-XbW"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="N6E-0m-TRp"/>
+                    <navigationItem key="navigationItem" title="Vehicle Info" id="N6E-0m-TRp"/>
                     <connections>
                         <outlet property="makeField" destination="lCw-yf-vZO" id="HZI-Ud-O1X"/>
                         <outlet property="policyField" destination="fco-Mh-H37" id="aaC-1J-DF1"/>
@@ -551,6 +635,9 @@
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PolicyViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PolicyViewController.h"/>
         </class>
         <class className="UserInfoViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UserInfoViewController.h"/>
